--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "ace-css": "^1.0.0",
     "autoprefixer": "^6.3.3",
+    "codemirror": "^5.11.0",
     "es6-promise": "^3.1.2",
+    "jquery": "^2.2.0",
     "postcss-loader": "^0.8.1",
     "precss": "^1.4.0",
-    "vue": "^1.0.16"
+    "vue": "^1.0.16",
+    "vue-resource": "^0.7.0"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
@@ -35,6 +38,7 @@
     "file-loader": "^0.8.4",
     "function-bind": "^1.0.2",
     "html-webpack-plugin": "^2.8.1",
+    "imports-loader": "^0.6.5",
     "inject-loader": "^2.0.1",
     "jasmine-core": "^2.4.1",
     "json-loader": "^0.5.4",
