--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "ace-css": "^1.0.0",
     "autoprefixer": "^6.3.3",
     "codemirror": "^5.11.0",
+    "coffee-loader": "^0.7.2",
     "es6-promise": "^3.1.2",
     "jquery": "^2.2.0",
     "postcss-loader": "^0.8.1",
     "precss": "^1.4.0",
+    "underscore": "^1.8.3",
     "vue": "^1.0.16",
+    "vue-progressbar": "^0.2.4",
     "vue-resource": "^0.7.0"
   },
   "devDependencies": {
@@ -59,5 +62,11 @@
     "webpack": "^1.12.2",
     "webpack-dev-middleware": "^1.4.0",
     "webpack-hot-middleware": "^2.6.0"
-  }
+  },
+  "repositories": [
+    {
+      "type": "git",
+      "url": "https://github.com/HubSpot/messenger.git"
+    }
+  ]
 }
