--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "coffee-loader": "^0.7.2",
     "es6-promise": "^3.1.2",
     "jquery": "^2.2.0",
+    "marked": "^0.3.5",
     "postcss-loader": "^0.8.1",
     "precss": "^1.4.0",
     "underscore": "^1.8.3",
