--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "marked": "^0.3.5",
     "postcss-loader": "^0.8.1",
     "precss": "^1.4.0",
+    "split.js": "^1.0.6",
     "underscore": "^1.8.3",
     "vue": "^1.0.16",
+    "vue-focus": "^0.1.1",
     "vue-progressbar": "^0.2.4",
     "vue-resource": "^0.7.0"
   },
