--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "ace-css": "^1.0.0",
+    "animate.css": "^3.5.1",
     "autoprefixer": "^6.3.3",
     "codemirror": "^5.11.0",
     "coffee-loader": "^0.7.2",
