--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "vue": "^1.0.16",
     "vue-focus": "^0.1.1",
     "vue-progressbar": "^0.2.4",
-    "vue-resource": "^0.7.0"
+    "vue-resource": "^0.7.0",
+    "vue-router": "^0.7.11"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
