--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "codemirror": "^5.11.0",
     "coffee-loader": "^0.7.2",
     "es6-promise": "^3.1.2",
+    "hint.css": "^2.1.0",
     "jquery": "^2.2.0",
     "marked": "^0.3.5",
     "postcss-loader": "^0.8.1",
