--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "codemirror": "^5.11.0",
     "coffee-loader": "^0.7.2",
     "es6-promise": "^3.1.2",
+    "flag-icon-css": "^1.0.0",
     "hint.css": "^2.1.0",
     "jquery": "^2.2.0",
     "marked": "^0.3.5",
@@ -38,6 +39,7 @@
     "babel-runtime": "^5.8.0",
     "connect-history-api-fallback": "^1.1.0",
     "css-loader": "^0.23.1",
+    "cucumber": "^0.9.5",
     "eslint": "^1.10.3",
     "eslint-friendly-formatter": "^1.2.2",
     "eslint-loader": "^1.2.0",
