--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "postcss-loader": "^0.8.1",
     "precss": "^1.4.0",
     "split.js": "^1.0.6",
+    "sweetalert": "^1.1.3",
     "underscore": "^1.8.3",
     "vue": "^1.0.16",
     "vue-focus": "^0.1.1",
