--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "autoprefixer": "^6.3.3",
     "codemirror": "^5.11.0",
     "coffee-loader": "^0.7.2",
+    "cucumber": "^0.9.5",
     "es6-promise": "^3.1.2",
     "hint.css": "^2.1.0",
     "jquery": "^2.2.0",
