--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "underscore": "^1.8.3",
     "vue": "^1.0.16",
     "vue-focus": "^0.1.1",
+    "vue-infinite-scroll": "^0.1.3",
     "vue-progressbar": "^0.2.4",
     "vue-resource": "^0.7.0",
     "vue-router": "^0.7.11",
