--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "vue-progressbar": "^0.2.4",
     "vue-resource": "^0.7.0",
     "vue-router": "^0.7.11",
+    "vue-validator": "^2.0.0-alpha.22",
     "vuex": "^0.3.0"
   },
   "devDependencies": {
