--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clipboard": "^1.5.8",
     "codemirror": "^5.11.0",
     "coffee-loader": "^0.7.2",
+    "coffee-script": "^1.10.0",
     "cucumber": "^0.9.5",
     "es6-promise": "^3.1.2",
     "flag-icon-css": "^1.0.0",
@@ -32,11 +33,11 @@
     "vue-infinite-scroll": "^0.1.3",
     "vue-paginate": "^1.0.0",
     "vue-progressbar": "^0.2.4",
-    "vue-typeahead": "^2.0.0",
     "vue-resource": "^0.7.0",
     "vue-router": "^0.7.11",
+    "vue-typeahead": "^2.0.0",
     "vue-validator": "^2.0.0-alpha.22",
-    "vuex": "^0.3.0"
+    "vuex": "^0.4.0"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
