--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ace-css": "^1.0.0",
     "animate.css": "^3.5.1",
     "autoprefixer": "^6.3.3",
+    "chalk": "^1.1.1",
     "clipboard": "^1.5.8",
     "codemirror": "^5.11.0",
     "coffee-loader": "^0.7.2",
