--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "postcss-loader": "^0.8.1",
     "precss": "^1.4.0",
     "prismjs": "^1.4.1",
+    "sortable": "^2.0.0",
     "split.js": "^1.0.6",
     "sweetalert": "^1.1.3",
     "underscore": "^1.8.3",
