--- a/package.json
+++ b/package.json
@@ -20,13 +20,14 @@
     "cucumber": "^0.9.5",
     "es6-promise": "^3.1.2",
     "flag-icon-css": "^1.0.0",
+    "hamburgers": "^0.3.0",
     "hint.css": "^2.1.0",
     "jquery": "^2.2.0",
     "marked": "^0.3.5",
     "postcss-loader": "^0.8.1",
     "precss": "^1.4.0",
     "prismjs": "^1.4.1",
-    "sortable": "^2.0.0",
+    "sortablejs": "git+https://github.com/RubaXa/Sortable.git",
     "split.js": "^1.0.6",
     "sweetalert": "^1.1.3",
     "underscore": "^1.8.3",
