--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "hamburgers": "^0.3.0",
     "hint.css": "^2.1.0",
     "jquery": "^2.2.0",
+    "json-loader": "^0.5.4",
     "marked": "^0.3.5",
     "postcss-loader": "^0.8.1",
     "precss": "^1.4.0",
