--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vue-admin",
-  "description": "A Vue.js front-end admin project",
+  "name": "vue-upload",
+  "description": "A Vue.js front-end file uploading project",
   "author": "Will Murray",
   "private": true,
   "scripts": {
@@ -12,6 +12,7 @@
     "ace-css": "^1.0.0",
     "animate.css": "^3.5.1",
     "autoprefixer": "^6.3.3",
+    "blueimp-file-upload": "^9.12.1",
     "chalk": "^1.1.1",
     "clipboard": "^1.5.8",
     "codemirror": "^5.11.0",
