--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "precss": "^1.4.0",
     "prismjs": "^1.4.1",
     "sortablejs": "git+https://github.com/RubaXa/Sortable.git",
+    "plupload": "git+https://github.com/moxiecode/plupload.git",
     "split.js": "^1.0.6",
     "sweetalert": "^1.1.3",
     "underscore": "^1.8.3",
