--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "prismjs": "^1.4.1",
     "sortablejs": "git+https://github.com/RubaXa/Sortable.git",
     "split.js": "^1.0.6",
+    "square-file-icons": "^1.2.1",
     "sweetalert": "^1.1.3",
     "underscore": "^1.8.3",
     "vue": "^1.0.16",
