--- a/package.json
+++ b/package.json
@@ -76,16 +76,18 @@
     "karma-phantomjs-launcher": "^1.0.0",
     "karma-spec-reporter": "0.0.24",
     "karma-webpack": "^1.7.0",
+    "node-sass": "^3.4.2",
     "phantomjs-prebuilt": "^2.1.3",
     "postcss": "^5.0.16",
     "rimraf": "^2.5.0",
+    "sass-loader": "^3.2.0",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
     "vue-hot-reload-api": "^1.2.0",
     "vue-html-loader": "^1.0.0",
     "vue-loader": "^8.1.3",
     "vue-style-loader": "^1.0.0",
-    "webpack": "^1.12.2",
+    "webpack": "^1.12.14",
     "webpack-dev-middleware": "^1.4.0",
     "webpack-hot-middleware": "^2.6.0"
   },
