--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "codemirror": "^5.11.0",
     "coffee-loader": "^0.7.2",
     "coffee-script": "^1.10.0",
+    "crypto-js": "^3.1.6",
     "cucumber": "^0.9.5",
     "es6-promise": "^3.1.2",
     "flag-icon-css": "^1.0.0",
