--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "split.js": "^1.0.6",
     "square-file-icons": "^1.2.1",
     "sweetalert": "^1.1.3",
+    "theaterjs": "^3.0.0",
     "underscore": "^1.8.3",
     "vue": "^1.0.16",
     "vue-focus": "^0.1.1",
